--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "chromedriver": "^2.44.1",
     "fakerator": "^0.3.0",
     "firefox-profile": "^1.2.0",
+    "fs": "0.0.1-security",
     "german-postal-codes": "^1.1.0",
     "mocha": "^5.2.0",
     "selenium-webdriver": "^4.0.0-alpha.1",
